For the latest news, visit the SparForte web site.

SparForte 2.0.4's focus was bringing SparForte into Jenkins continuous integration.

CHANGES SINCE 2.0.3

1. Fix: backquoted strings cannot be used as a Bourne shell command.

2. Fix: type error when using env; to show all parameters, resulting from new parameterized generic type handling error, has been fixed.

3. Refactor: help command split out from builtins package.

4. Refactor: new report system created, built-in help topics converted to use it.

5. Change: pragma deprecated/depreciated is now an error when running in design phase mode, but remains a warning otherwise.

6. Fix: spar -e with an empty string now produces an appropriate error message instead of "empty script name".

7: Fix: a file or spar -e string with only whitespace is now an error.

8: Fix: "hash clash" internal error message corrected, typically on shell exit.

9. Fix: dbm online help fixed.

10. Fix: strings.match online help no longer "help match" but "help strings.match" as in the index page.

11. Fix: set_input added to the help index.

12. Fix: with separate added to help command.

13. Change: make coverage regression and coverage tests now support Jenkins using JUnit/Cobetura.

14. New: user types and subtypes can be declared abstract.  [TODO: check parameters, negative tests, and docs.]

15. New: user types and subtypes can be declared limited.  [TODO: check parameters, negative tests - arrays, records, which can't be assigned yet].  This isn't that useful until packages or some other context is defined where it can be assigned.]

16. Fix: passing a record to an array index no longer results in an exception crash.

17. New: gprof profiling enabled on make coverage

18. Fix: rounding errors in calendar.time arithmetic fixed.

19. Fix: funtions many no longer be called in static expressions (since they use regular expressions).

20. Refactor: expression handling redesigned to get some minor speed improvements.

